--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
 body {
   padding-top: 70px;
-}
+  margin-top: 100px;
+  -webkit-transition: all 1s;
+          transition: all 1s; }
+
+.container h1:first-of-type {
+  margin-top: 0; }
